--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="med-card">
             <img class="med-image" src="https://via.placeholder.com/150" alt="Medication Image">
             <div class="med-name">Omee</div>
-            <a href="https://wa.me/8638875149?text=Booking%20confirmation:%20Medication%201">Book Medication 1</a>
+            <a href="https://wa.me/8638875149?text=Booking%20confirmation:%20Medication%201">Omee</a>
             <div class="med-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
         </div>
         <div class="med-card">
